<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#0D25AC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038" />

        <TextView
            android:id="@+id/text_almost_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You're almost there"
            android:textColor="#0D25AC"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_up"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUsernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password_min_6_characters"
            app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUsernameLayout"
            app:layout_constraintVertical_bias="0.042">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#F6F4F4"
            app:backgroundTint="#0D25AC"
            app:layout_constraintBottom_toTopOf="@+id/textViewOr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPasswordInput"
            app:layout_constraintVertical_bias="0.397"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/button_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
            app:layout_constraintStart_toStartOf="@+id/button_sign_up"
            app:layout_constraintTop_toTopOf="@+id/button_sign_up" />

        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textColor="#010202"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_signin_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
            app:layout_constraintVertical_bias="0.309" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signin_google"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/sign_up_with_google"
            android:textAllCaps="false"
            android:textColor="#CB050505"
            android:textSize="15sp"
            app:backgroundTint="#DCDCDC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
            app:layout_constraintVertical_bias="0.225"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

        <Button
            android:id="@+id/button_signup_facebook"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/sign_up_with_facebook"
            android:textAllCaps="false"
            android:textColor="#CB050505"
            android:textSize="15sp"
            app:backgroundTint="#DCDCDC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signin_google"
            app:layout_constraintVertical_bias="0.127"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

        <TextView
            android:id="@+id/textView_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/already_have_an_account"
            android:textColor="#0D25AC"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signup_facebook"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:textColor="#0D25AC"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toEndOf="@+id/textView_have_an_account"
            app:layout_constraintTop_toBottomOf="@+id/button_signup_facebook"
            app:layout_constraintVertical_bias="0.18" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>